.archive/wikijs/wikijs-ingress-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-wikijs
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`wiki.crookster.org`)
      services:
        - name: wikijs
          port: 3000
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-wikijs

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wiki.idcrook.dev`)
      services:
        - name: wikijs
          port: 3000
  tls:
    certResolver: wildcardresolver
